# file_renamer

./: .gitignore  GEMINI.md  pyproject.toml  test_books_manual.py  test_itunes.py
.github/workflows/: release.yml
gui/: .tauri_secret_key.pub  package-lock.json  package.json
gui/src/: App.tsx  api.ts  index.css  types.ts
gui/src-tauri/: 2  Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
gui/src/components/: FilePicker.tsx  GroupedFileList.tsx  MatchSelectionModal.tsx  PreviewTable.tsx  SettingsPage.tsx  UndoPreviewModal.tsx  UpdateModal.tsx
gui/src/hooks/: useUpdater.ts
scripts/: build_backend.py  bump_version.py  generate_fixtures.py  generate_fixtures_p3.py  generate_test_data.py  generate_update_manifest.py  kill_renamer.py
src/: api.py  config.py  filesystem.py  logger.py  main.py  renamer.py  scanner.py  undo.py
src/api_clients/: audnexus.py  books.py  itunes.py  tmdb.py
tests/: debug_regex.py  test_api_integration.py  test_filesystem.py  test_renamer_parsing.py  test_renamer_utils.py  test_tv_parsing.py  test_undo_logging.py
